# chengjiaoguan

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Closer 工作台（离线版）.html  README.md  pyproject.toml  成交官_Agent工具接口清单_V1.0.docx  成交官_两人开发分工排期表_方案A平衡版_V2.1.xlsx  成交官_产品设计文档_V1.1.docx  成交官_后端API契约_V1.0.docx  成交官_技术架构设计文档_V1.1.docx  成交官_数据库设计文档_V1.0.docx  跨境B2B_AI询盘成交Agent_市场调研报告.docx
app/: CLAUDE.md  __init__.py  agent_runtime.py  agent_tools.py  database.py  dependencies.py  env.py  errors.py  main.py  models.py  schemas.py
docs/: CLAUDE.md  COMPETITION_SUBMISSION.md  COMPLETION_AUDIT.md  CROSS_REVIEW_ACTION_PLAN.md  Closer 工作台（离线版）.html  DATA_OPERATIONS.md  DEMO_RUNBOOK.md  END_TO_END_EVIDENCE.md  ENVIRONMENT.md  EXECUTION_PLAN.md  IMPLEMENTATION_AUDIT.md  PRODUCTION_RUNBOOK.md  PUBLIC_REVIEW_CHECKLIST.md  SPECS.md  VISUAL_QA.md  WAVE2_SUBMISSION.md  WAVE3_SUBMISSION.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
migrations/: 001_initial.sql  CLAUDE.md
scripts/: CLAUDE.md  demo_flow.py  production_check.py
skills/: CLAUDE.md  README.md
tests/: CLAUDE.md  conftest.py  test_agent_runtime.py  test_approvals_quotations_api.py  test_auth_dependency.py  test_channel_delivery_clients.py  test_channel_receipts.py  test_channel_test_delivery.py  test_configuration_api.py  test_conversation_api.py  test_crm_tool.py  test_customers_api.py  test_data_exports_api.py  test_delivery_attempts.py  test_delivery_attempts_api.py  test_demo_api.py  test_demo_flow_script.py  test_email_adapter.py  test_email_polling.py  (+26 more)
(+106 files in other folders)
